--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,5 +1,35 @@
-{% extends "base.html" %} {% block title %}Register{% endblock %}
-
-{%block content%}
-<h1> this is the sign up page </h1>
+{% extends "base.html" %} {% block title %}Register{% endblock %} {%block content%}
+<form method="POST">
+    <h3 align="center">Sign Up</h3>
+    <div class="form-group">
+      <label for="email">Email Address</label>
+      <input
+        type="email"
+        class="form-control"
+        id="email"
+        name="email"
+        placeholder="Enter email"
+      />
+    </div>
+    <div class="form-group">
+      <label for="firstName">First Name</label>
+      <input
+        type="text"
+        class="form-control"
+        id="firstName"
+        name="firstName"
+        placeholder="Enter first name"
+      />
+    </div>
+    <div class="form-group">
+      <label for="password1">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password1"
+        name="password1"
+        placeholder="Enter password"
+      />
+    </div>
+<form>
 {% endblock %}
