--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -5,21 +5,20 @@
 <div class="row justify-content-center mt-5">
     <div class="col-md-6">
         <div class="card">
-            <div class="card-header bg-dark text-white">
+            <div class="card-header bg-dark text-white"> 
                 <h3 class="mb-0">Login</h3>
             </div>
             <div class="card-body">
                 <form method="POST" action="/login">
-                    <!-- Username Field -->
                     <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required>
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
                     </div>
-                    <!-- Password Field -->
                     <div class="form-group">
                         <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
                     </div>
+                    <br />
                     <button type="submit" class="btn btn-primary">Login</button>
                 </form>
             </div>
