--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -22,23 +22,28 @@
           <div class="vending-machine-list">
             {% if user.vending_machines %}
               {% for machine in user.vending_machines %}
-                <div class="vending-machine card mb-3 p-3">
-                  <h3>{{ machine.machine_name }}</h3>
-                  <p>Location: {{ machine.location }}</p>
-                  <p>Budget: ${{ machine.budget }}</p>
-                  <p>Total Sales: ${{ machine.calculate_total_sales() }}</p>
-                  <a href="{{ url_for('vending_machine_bp.vending_machine_dashboard', machine_id=machine.id) }}" class="btn btn-primary">View Dashboard</a>
-                  <form method="POST" action="{{ url_for('views.delete_vending_machine', vending_machine_id=machine.id) }}" class="delete-form mt-4">
-                    <div class="d-flex justify-content-between">
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                        <form method='POST' action="{{ url_for('views.edit_vending_machine', vending_machine_id=machine.id) }}" class="edit-form"> 
-                            <button type="submit" class="btn btn-warning">
-                                <i class="fas fa-edit"></i> Edit
-                            </button>
+              <div class="vending-machine card mb-3 p-3">
+                <h3>{{ machine.machine_name }}</h3>
+                <p>Location: {{ machine.location }}</p>
+                <p>Budget: ${{ machine.budget }}</p>
+                <p>Total Sales: ${{ machine.calculate_total_sales() }}</p>
+                <a href="{{ url_for('vending_machine_bp.vending_machine_dashboard', machine_id=machine.id) }}" class="btn btn-primary">View Dashboard</a>
+                
+                <div class="row mt-4">
+                    <div class="col-md-6 text-left">
+                        <form method="POST" action="{{ url_for('views.delete_vending_machine', vending_machine_id=machine.id) }}" class="delete-form">
+                            <button type="submit" class="btn btn-danger">Delete</button>
                         </form>
                     </div>
-                </form> 
+                    <div class="col-md-6 text-right">
+                        <a href="{{ url_for('views.edit_vending_machine', vending_machine_id=machine.id) }}" class="btn btn-warning">
+                            <i class="fas fa-edit"></i> Edit
+                        </a>
+                    </div>
                 </div>
+            </div>
+            
+            
               {% endfor %}
             {% else %}
               <p>You don't have any vending machines yet.</p>
@@ -66,7 +71,7 @@
             <label for="machine_name">Machine Name</label>
             <input type="text" class="form-control" id="machine_name" name="machine_name" placeholder="Enter machine name" required>
           </div>
-          <div class="form-group">
+          <div class="form-group"> 
             <label for="location">Location</label>
             <input type="text" class="form-control" id="location" name="location" placeholder="Enter location">
           </div>
